--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
 
         <button onclick=" 
-            playGame('Rock');" class="button-icon"  class="rock1"
+            playGame('rock');" class="button-icon"  
             ><img src="./images/rock-emoji.png" class="img-icon"> </button>
  
         <button onclick="
-            playGame('Paper');" class="button-icon" class="paper"
+            playGame('paper');" class="button-icon"
          ><img src="./images/paper-emoji.png "class="img-icon"></button>
 
          <button onclick="
-            playGame('Scissor');" class="button-icon" class="scissor"
+            playGame('scissor');" class="button-icon"
          ><img src="./images/scissor-emoji.png"class="img-icon"></button>
 
 
